# v4l2_gui

./: .gitignore  CMakeLists.txt  README.md
include/: debug.h  joystick.h  mainwindow.h  usb_camera.h
resources/: resources.qrc
src/: joystick.cpp  main.cpp  mainwindow.cpp  usb_camera.cpp
ui/: mainwindow.ui
